# IPE

./: .gitignore  LICENSE  README.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: ci.yml
config/: _manifest.yaml  adult-content-policy.yaml  comfyui-prompt-pack.yaml  core-knowledge.yaml  enhancement-pipeline.yaml  execution-catalog.yaml  image-edit-policy.yaml  master-module-map.yaml  nsfw-baseline-resolver-ip-outfit.yaml  nsfw-baseline-resolver-random-outfit.yaml  nsfw-baseline-resolver.yaml  nsfw-comfyui-overrides.yaml  nsfw-composition-lighting-controller.yaml  nsfw-default-exposure-staging.yaml  nsfw-dynamic-scene-controller.yaml  nsfw-exposure-action-controller.yaml  nsfw-exposure-light-readability.yaml  nsfw-local-anatomy-surface-controller.yaml  nsfw-material-environment-controller.yaml  nsfw-random-outfit-selection.yaml  nsfw-semantic-exposure-visibility.yaml  nsfw-visible-exposure-contract.yaml  nsfw-visual-director.yaml  quality-contract.yaml  skill-phase-0.yaml  skill-phase-1.yaml  skill-phase-2.yaml  skill-phase-3-1.yaml  skill-phase-3.yaml  skill-phase-4-1.yaml  skill-phase-4-2.yaml  skill-phase-4-3.yaml  skill-phase-4.yaml  skill-phase-5.yaml  skill-routing-critical-rules.yaml  skill-routing-mature-content.yaml  skill-routing-style-conflict.yaml
config/adult-character-whitelist/: index.yaml  runtime-alias-resolver.json
docs/: comfyui-nsfw-benchmark-sheet.md  execution-runtime.md
ipe/: __init__.py  capsule_retriever.py  cli.py  constants.py  io.py  module_router.py  phase_engine.py  prompt_renderer.py  subject_intent_parser.py  validator.py
references/: agent-synthesis-workflow.md
scripts/: __init__.py  benchmark_execution_packets.py  build_adult_whitelist.py  check_default_exposure_staging.py  check_exposure_geometry.py  check_exposure_light_readability.py  check_random_outfit_selection.py  check_semantic_exposure_visibility.py  compile_execution_packet.py  execution_runtime.py  export_prompt_pack.py  harness.py  harness_checkpoint.py  harness_phases.py  materialize_execution_phase.py  resolve_adult_character.py  validate_adult_whitelist.py  validate_execution_record.py  validate_quality_gate.py
src/: index.js
tests/: execution-fixtures.yaml  pipeline.test.js  prompt-regression-cases.yaml  test_adult_whitelist.py  test_config_contracts.py  test_execution_runtime.py  test_export_prompt_pack.py  test_harness.py  test_ipe_runtime.py
(+363 files in other folders)
