[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nsfw-comfyui-zimage-prompt-enhancer"
version = "4.0.0"
description = "Adult-only fictional/original character prompt enhancement rules for ComfyUI Z-Image."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ipe = "ipe.cli:main"
nsfw-compile-execution = "scripts.compile_execution_packet:main"
nsfw-materialize-execution-phase = "scripts.materialize_execution_phase:main"
nsfw-validate-execution = "scripts.validate_execution_record:main"
nsfw-check-exposure-geometry = "scripts.check_exposure_geometry:main"
nsfw-resolve-adult-character = "scripts.resolve_adult_character:main"
nsfw-validate-quality = "scripts.validate_quality_gate:main"
nsfw-benchmark-execution = "scripts.benchmark_execution_packets:main"

[tool.setuptools]
packages = ["scripts", "ipe"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
markers = [
    "yaml: validates YAML syntax and contracts",
    "regression: validates NSFW prompt-pack examples",
]
